@@ -4,6 +4,7 @@
 2.4-0
 	** Fixed error in definition/calculation of cross-validation
 	   error and standard error
+        *  cv.grpreg: Now returns full data fit as well as CV errors
 	*  coef and predict methods now accept lambda as argument
 	*  Added logLik method (which in turn allows AIC/BIC)
 	*  Fixed bug that arose if lambda was scalar (instead of a vector)
